<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leddar_ros2</name>
  <version>0.0.0</version>
  <description>Package for using leddartech products</description>
  <maintainer email="julien.stanguennec@leddartech.com">Julien Stanguennec</maintainer>
  <license>BSD 3-Clause License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>leddar</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!--
  <exec_depend>leddar_ros2</exec_depend>
  <exec_depend>leddar_sensor</exec_depend>
  
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
